[tool.poetry]
name = "sentiment-prediction"
version = "0.1.0"
description = ""
authors = ["artem.bardakov <artem.bardakov@gmail.com>"]
readme = "README.md"
packages = [{include = "sentiment_prediction"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
