[tool.poetry]
name = "maks-nlp-research"
version = "0.1.0"
description = ""
authors = ["artem.bardakov <artem.bardakov@rtlabs.ru>"]
readme = "README.md"
packages = [{include = "maks_nlp_research"}]

[tool.poetry.dependencies]
python = "^3.9.13"
openpyxl = "^3.0.10"
clearml = "^1.7.1"
hydra-core = "^1.2.0"
hydra-colorlog = "^1.2.0"
dvc = "^2.30.0"
numpy = "^1.23.4"
pandas = "^1.5.0"
jupyterlab = "^3.4.8"
scikit-learn = "^1.1.2"
python-dotenv = "^0.21.0"
torch = { version = "=1.12.1+cu113", source = "pytorch" }
torchvision = { version = "=0.13.1+cu113", source = "pytorch" }
torchaudio = { version = "=0.12.1+cu113", source = "pytorch" }
transformers = "^4.23.1"
pytorch-lightning = "^1.7.7"
lightning-transformers = "^0.2.3"
ipywidgets = "^8.0.2"
lightning-bolts = "^0.5.0"
onnx = "^1.12.0"
seaborn = "^0.12.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu113/"
default = false
secondary = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
